--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,18 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DbProject"
         mc:Ignorable="d"
-        Title="6 этап" Height="364" Width="480">
+        Title="MainWindow" Height="363.6" Width="477.6">
     <Grid Name = "MainGrid">
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Графики" VerticalAlignment="Top" Height="16" Width="64"/>
         <TextBlock HorizontalAlignment="Left" Margin="322,13,0,0" TextWrapping="Wrap" Text="Таблицы" VerticalAlignment="Top"/>
         <Button Content="Контракты" HorizontalAlignment="Left" Margin="10,59,0,0" VerticalAlignment="Top" Width="107" Height="66
-                "/>
-        <Button Content="Зарплаты" HorizontalAlignment="Left" Margin="10,154,0,0" VerticalAlignment="Top" Width="107" Height="66"/>
+                "
+                Click="Contracts_OnClick" />
+        <Button Content="Зарплаты" HorizontalAlignment="Left" Margin="10,154,0,0" VerticalAlignment="Top" Width="107" Height="66"
+                Click="Salaries_OnClick" />
         <Button Content="Подписчики" HorizontalAlignment="Left" Margin="10,258,0,0" VerticalAlignment="Top" Width="107" Height="66
-                "/>
+                "
+                Click="Subscribers_OnClick" />
 
-        <Button Content="Статьи авторов" HorizontalAlignment="Left" Margin="322,59,0,0" VerticalAlignment="Top" Width="107" Height="66"/>
-        <Button Content ="Контакты" HorizontalAlignment="Left" Margin="322,154,0,0" VerticalAlignment="Top" Width="107" Height="66" />
-        <Button Content="Сотрудники" HorizontalAlignment="Left" Margin="322,258,0,0" VerticalAlignment="Top" Width="107" Height="66"/>
+        <Button Content="Статьи авторов" HorizontalAlignment="Left" Margin="322,59,0,0" VerticalAlignment="Top" Width="107" Height="66"
+                Click="Articles_OnClick" />
+        <Button Content ="Контакты" HorizontalAlignment="Left" Margin="322,154,0,0" VerticalAlignment="Top" Width="107" Height="66"
+                Click="Contacts_OnClick" />
+        <Button Content="Сотрудники" HorizontalAlignment="Left" Margin="322,258,0,0" VerticalAlignment="Top" Width="107" Height="66"
+                Click="Employees_OnClick" />
     </Grid>
 </Window>
